--- a/Curso HTML e CSS/ex011/index.html
+++ b/Curso HTML e CSS/ex011/index.html
@@ -13,5 +13,8 @@
         <source media="(max-width: 1050px)" srcset="imagens/foto-M.png" type="image/png">
         <img src="imagens/foto-G.png" alt="Imagem flexível">
     </picture>
+    <h1>Reproduzindo Áudio</h1>
+    <p>vamos aprender a reproduzir audios em HTML5</p>
+    <audio src="midia/Coast - Anno Domini Beats.mp3" controls></audio>
 </body>
 </html>
